<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jacob.koger023.programminggametextadventure.QuestionActivity">

    <Button
        android:id="@+id/third_response_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="3rdR"
        android:text="@string/_3rd_response"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/fourth_response_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="4thR"
        android:text="@string/_4th_response"

        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:textSize="12sp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50000"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="177dp" />

    <Button
        android:id="@+id/first_response_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="1stR"
        android:text="@string/_1st_response"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/third_response_button"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/second_response_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="2ndR"
        android:text="@string/_2nd_response"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/fourth_response_button"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question Placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/first_response_button"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Direction Placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/direction_text_view"
        app:layout_constraintBottom_toTopOf="@+id/question_textview"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="HardcodedText"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="8dp" />

    <TextView
        android:text="Item Placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_text_view"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/question_textview"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        tools:ignore="HardcodedText" />
</android.support.constraint.ConstraintLayout>
